--- a/src/sass/_location.scss
+++ b/src/sass/_location.scss
@@ -1,99 +1,102 @@
-.section__location__belgium {
-  @include containerLA;
-  margin-top: 64px;
+body {
+  height: 1870px;
+  .section__location__belgium {
+    @include containerLA;
+    margin-top: 64px;
 
-  .box {
-    @include lowcontainer;
+    .box {
+      @include lowcontainer;
 
-    h2 {
-      @include lowcontainerH;
-    }
+      h2 {
+        @include lowcontainerH;
+      }
 
-    .box__txt {
-      @include lowcontainerHT;
+      .box__txt {
+        @include lowcontainerHT;
 
-      div {
-        @include lowcontainerHTD;
+        div {
+          @include lowcontainerHTD;
 
-        h3 {
-          @include lowcontainerHTDH;
-        }
+          h3 {
+            @include lowcontainerHTDH;
+          }
 
-        p {
-          @include lowcontainerHTDP;
+          p {
+            @include lowcontainerHTDP;
+          }
         }
       }
-    }
 
-    img {
-      height: 326px;
-      width: 350px;
+      img {
+        height: 326px;
+        width: 350px;
+      }
     }
   }
-}
 
-.section__location__australia {
-  @include containerLA;
+  .section__location__australia {
+    @include containerLA;
 
-  .box {
-    @include lowcontainer;
+    .box {
+      @include lowcontainer;
 
-    h2 {
-      @include lowcontainerH;
-    }
+      h2 {
+        @include lowcontainerH;
+      }
 
-    .box__txt {
-      @include lowcontainerHT;
+      .box__txt {
+        @include lowcontainerHT;
 
-      div {
-        @include lowcontainerHTD;
+        div {
+          @include lowcontainerHTD;
 
-        h3 {
-          @include lowcontainerHTDH;
-        }
+          h3 {
+            @include lowcontainerHTDH;
+          }
 
-        p {
-          @include lowcontainerHTDP;
+          p {
+            @include lowcontainerHTDP;
+          }
         }
       }
-    }
 
-    img {
-      height: 326px;
-      width: 350px;
+      img {
+        height: 326px;
+        width: 350px;
+      }
     }
   }
-}
 
-.section__location__uk {
-  @include containerLB;
+  .section__location__uk {
+    @include containerLB;
 
-  .box {
-    @include lowcontainer;
+    .box {
+      @include lowcontainer;
 
-    h2 {
-      @include lowcontainerH;
-    }
+      h2 {
+        @include lowcontainerH;
+      }
 
-    .box__txt {
-      @include lowcontainerHT;
+      .box__txt {
+        @include lowcontainerHT;
 
-      div {
-        @include lowcontainerHTD;
+        div {
+          @include lowcontainerHTD;
 
-        h3 {
-          @include lowcontainerHTDH;
-        }
+          h3 {
+            @include lowcontainerHTDH;
+          }
 
-        p {
-          @include lowcontainerHTDP;
+          p {
+            @include lowcontainerHTDP;
+          }
         }
       }
-    }
 
-    img {
-      height: 326px;
-      width: 350px;
+      img {
+        height: 326px;
+        width: 350px;
+      }
     }
   }
 }
@@ -106,8 +109,6 @@
       display: flex;
       flex-direction: column-reverse;
       margin-top: 0;
-      margin-left: 24px;
-      margin-right: 24px;
 
       img {
         height: 394px;
@@ -121,7 +122,7 @@
         height: 394px;
         width: 375px;
         border-radius: 0px;
-        h2{
+        h2 {
           margin: 80px 24px 24px 24px;
           width: 327px;
           height: 36px;
@@ -135,6 +136,8 @@
           div {
             width: 327px;
             height: 75px;
+            text-align: center;
+            margin-left: 24px;
           }
         }
       }
@@ -144,8 +147,6 @@
       display: flex;
       flex-direction: column;
       margin-top: 0;
-      margin-left: 24px;
-      margin-right: 24px;
 
       img {
         height: 394px;
@@ -158,7 +159,7 @@
         height: 394px;
         width: 375px;
         border-radius: 0px;
-        h2{
+        h2 {
           margin: 80px 24px 24px 24px;
           width: 327px;
           height: 36px;
@@ -172,6 +173,8 @@
           div {
             width: 327px;
             height: 75px;
+            text-align: center;
+            margin-left: 24px;
           }
         }
       }
@@ -181,8 +184,6 @@
       display: flex;
       flex-direction: column-reverse;
       margin-top: 0;
-      margin-left: 24px;
-      margin-right: 24px;
 
       img {
         height: 394px;
@@ -195,7 +196,7 @@
         height: 394px;
         width: 375px;
         border-radius: 0px;
-        h2{
+        h2 {
           margin: 80px 24px 24px 24px;
           width: 327px;
           height: 36px;
@@ -205,15 +206,18 @@
         .box__txt {
           display: flex;
           flex-direction: column;
+          margin-left: 0px;
 
           div {
             width: 327px;
             height: 75px;
+            text-align: center;
+            margin-left: 24px;
           }
         }
       }
     }
-    footer{
+    footer {
       margin-top: 0;
     }
   }
