--- a/src/sass/_index.scss
+++ b/src/sass/_index.scss
@@ -397,6 +397,7 @@ body {
             width: 197px;
             margin-left: 165px;
             margin-top: 144px;
+            
           }
 
           ul {
@@ -505,10 +506,10 @@ body {
     max-width: 375px;
     margin:auto;
     header{
-      width:375px;
+      width:350px;
       margin:35px 24px 37px;
       nav{
-        width: 327px;
+        
         ul{
           display: none;
         }
@@ -558,6 +559,7 @@ body {
         height:798px;
         gap:24px;
         text-align: center;
+        margin-bottom: 120px;
         .projects__web{
           height: 250px;
           a{
@@ -711,8 +713,13 @@ body {
               margin-left: 87px;
               margin-right: 91px;
               margin-top: 253px;
+              margin-bottom: 32px;
             }
-
+            .ligne{
+              margin: 0px auto;
+              width: 327px;
+              border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+            }
             ul{
               flex-direction: column;
               text-align: center;
@@ -723,16 +730,16 @@ body {
         }
 
         hr{
-          width:327px ;
+          display: none ;
         }
 
         .inline__lower__container{
           flex-direction: column;
-
+          height: 280px;
           .section__info{
             flex-direction: column;
             text-align: center;
-            margin: 40px auto;
+            margin: 0px auto 40px;
             width: 327px;
             .info__address{
               padding: 0;
