--- a/src/sass/_aboutus.scss
+++ b/src/sass/_aboutus.scss
@@ -2,7 +2,7 @@ body {
   width: 1440px;
   @media screen and(max-width: 375px) {
     width: 375px;
-    height: 8000px;
+    height: 5094px;
   }
   .section__aboutUs {
     @include containerA;
@@ -10,6 +10,7 @@ body {
       display: flex;
       flex-direction: column-reverse;
       width: 375px;
+      height: 715px;
     }
     div {
       background-color: $pink;
@@ -21,6 +22,7 @@ body {
       border-bottom-left-radius: 20px;
       @media screen and(max-width: 375px) {
         border-radius: 0;
+        height: 395px;
       }
 
       h1 {
@@ -30,6 +32,7 @@ body {
           height: 36px;
           text-align: center;
           margin-left: 24px;
+          margin-top: 80px;
         }
       }
       p {
@@ -49,7 +52,6 @@ body {
         @media screen and(max-width: 375px) {
           height: 320px;
           width: 375px;
-          border-radius: 0;
         }
       }
     }
@@ -58,8 +60,10 @@ body {
     @include containerB;
     @media screen and(max-width:375px) {
       display: flex;
-      flex-direction: column-reverse;
+      flex-direction: column;
+      justify-content: space-evenly;
       width: 375px;
+      height: 865px;
     }
     div {
       background-color: $pinkBg;
@@ -68,6 +72,7 @@ body {
       border-bottom-right-radius: 20px;
       @media screen and(max-width: 375px) {
         border-radius: 0;
+        height: 545px;
       }
       h1 {
         @include h1sectionT;
@@ -77,6 +82,8 @@ body {
           height: 36px;
           text-align: center;
           margin-left: 24px;
+          margin-top: 80px;
+          margin-bottom: 24px;
         }
       }
       p {
@@ -112,6 +119,10 @@ body {
     color: $grey;
     width: 1110px;
     text-align: center;
+    @media screen and(max-width: 375px) {
+      height: 1188px;
+      width: 350px;
+    }
     img {
       margin: 0 auto 48px;
     }
@@ -156,7 +167,8 @@ body {
     @media screen and(max-width:375px) {
       display: flex;
       flex-direction: column-reverse;
-
+      justify-content: space-evenly;
+      height: 865px;
       width: 375px;
     }
     div {
@@ -164,6 +176,9 @@ body {
       color: $grey;
       border-top-left-radius: 20px;
       border-bottom-left-radius: 20px;
+      @media screen and(max-width:375px) {
+        height: 545px;
+      }
       h1 {
         @include h1sectionT;
         color: $pink;
@@ -172,6 +187,8 @@ body {
           height: 36px;
           text-align: center;
           margin-left: 24px;
+          margin-top: 80px;
+          margin-bottom: 24px;
         }
       }
       p {
